--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -12,6 +12,11 @@ _Listed in order of descending release date of newest edition._
 [width="80", cols="<.^30a,.^70"]
 |===
 
+| image::https://s3.amazonaws.com/titlepages.leanpub.com/elementsofclojure/small[Elements of Clojure,link="https://leanpub.com/elementsofclojure"]
+| https://leanpub.com/elementsofclojure[Elements of Clojure] +
+by Zachary Tellman +
+Sep 27, 2017
+
 | image::http://ecx.images-amazon.com/images/I/41k50H6VpaL._SL160.jpg[ClojureScript Unraveled,link="http://a.co/cDfN4n4"]
 | http://a.co/cDfN4n4[Quick Clojure: Effective Functional Programming] +
 by Mark McDonnell +
