Add link to post

--- a/content/news/2018/01/05/git-deps.adoc
+++ b/content/news/2018/01/05/git-deps.adoc
@@ -38,3 +38,4 @@ For more information see:
 * <<xref/../../../../../guides/getting_started#,Getting Started>> - to install or update the Clojure tools
 * <<xref/../../../../../guides/deps_and_cli#,Deps and CLI Guide>> - on how to use the Clojure tools
 * <<xref/../../../../../reference/deps_and_cli#,Deps and CLI Reference>> - complete reference info
+* https://www.youtube.com/watch?v=oyLBGkS5ICk[Spec-ulation] keynote - on growth versus breakage
