update event links

--- a/content/events/2018/dutchclojureday.adoc
+++ b/content/events/2018/dutchclojureday.adoc
@@ -3,9 +3,12 @@ Dutch Clojure Day
 2018-04-21
 :jbake-type: event
 :jbake-edition: 2018
-:jbake-link: https://www.eventbrite.com/e/dutch-clojure-day-2018-tickets-41749338395
+:jbake-link: http://clojuredays.org/
 :jbake-location: Amsterdam, Netherlands
 :jbake-start: 2018-04-21
 :jbake-end: 2018-04-21
 
 The Annual Gathering of Clojure Enthusiasts and Practitioners in the Netherlands!
+
+* CFP: https://www.papercall.io/dcd18
+* Register: https://www.eventbrite.com/e/dutch-clojure-day-2018-tickets-41749338395
