--- a/content/community/devchangelog.adoc
+++ b/content/community/devchangelog.adoc
@@ -11,6 +11,10 @@ The official https://github.com/clojure/clojure/blob/master/changes.md[changelog
 
 == Release 1.10
 
+=== 1.10.0-alpha3 (Feb 8, 2018)
+
+- prepl - programmatic REPL
+
 === 1.10.0-alpha2 (Jan 19, 2018)
 
 - https://dev.clojure.org/jira/browse/CLJ-2313[CLJ-2313] - Fix for string capture mode
