--- a/content/community/devchangelog.adoc
+++ b/content/community/devchangelog.adoc
@@ -11,6 +11,10 @@ The official https://github.com/clojure/clojure/blob/master/changes.md[changelog
 
 == Release 1.10
 
+=== 1.10.0-alpha4 (Feb 9, 2018)
+
+- Fix 0-arity bug for read+string
+
 === 1.10.0-alpha3 (Feb 8, 2018)
 
 - prepl - programmatic REPL
