--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -12,6 +12,11 @@ _Listed in order of descending release date of newest edition._
 [width="80", cols="<.^30a,.^70"]
 |===
 
+| image::http://ecx.images-amazon.com/images/I/51Bvd25CstL._SL160.jpg[Programming Clojure, 3rd edition,link="http://a.co/bSxW6A6"]
+| http://a.co/bSxW6A6[Programming Clojure, 3rd edition] +
+by Alex Miller, Stuart Halloway, Aaron Bedra +
+Feb 21, 2018
+
 | image::https://s3.amazonaws.com/titlepages.leanpub.com/elementsofclojure/small[Elements of Clojure,link="https://leanpub.com/elementsofclojure"]
 | https://leanpub.com/elementsofclojure[Elements of Clojure] +
 by Zachary Tellman +
@@ -156,11 +161,6 @@ Nov 10, 2012
 | http://a.co/jiaX8tX[Clojure Programming] +
 by Chas Emerick, Brian Carper, Christophe Grand +
 Apr 22, 2012
-
-| image::http://ecx.images-amazon.com/images/I/41aJY7x54bL._SL160.jpg[Programming Clojure,link="http://a.co/6oRD92i"]
-| http://a.co/6oRD92i[Programming Clojure] +
-by Stuart Halloway, Aaron Bedra +
-Apr 20, 2012
 
 | image::http://clojure-buch.de/cover.jpg[Clojure,link="http://clojure-buch.de/",width=130]
 | http://clojure-buch.de/[Clojure] +
