--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -13,7 +13,7 @@ _Listed in order of descending release date of newest edition._
 |===
 
 | image::http://ecx.images-amazon.com/images/I/51Bvd25CstL._SL160.jpg[Programming Clojure, 3rd edition,link="http://a.co/bSxW6A6"]
-| http://a.co/bSxW6A6[Programming Clojure, 3rd edition] +
+| http://a.co/bSxW6A6[Programming Clojure 3rd edition] +
 by Alex Miller, Stuart Halloway, Aaron Bedra +
 Feb 21, 2018
 
