--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -12,7 +12,7 @@ _Listed in order of descending release date of newest edition._
 [width="80", cols="<.^30a,.^70"]
 |===
 
-| image::http://ecx.images-amazon.com/images/I/51Bvd25CstL._SL160.jpg[Programming Clojure, 3rd edition,link="http://a.co/bSxW6A6"]
+| image::http://ecx.images-amazon.com/images/I/51Bvd25CstL._SL160.jpg[Programming Clojure 3rd edition,link="http://a.co/bSxW6A6"]
 | http://a.co/bSxW6A6[Programming Clojure 3rd edition] +
 by Alex Miller, Stuart Halloway, Aaron Bedra +
 Feb 21, 2018
