Added a 'Programming at the REPL' guide
Added a 'Programming at the REPL' guide

split repl guide into chapters and improved the content.

fixed some typos

--- a/content/guides/guides.adoc
+++ b/content/guides/guides.adoc
@@ -10,6 +10,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 * <<getting_started#,Getting Started>>
 * <<learn/syntax#,Learn Clojure>>
+* <<repl/introduction#,Programming at the REPL>>
 * <<faq#,FAQ>>
 
 === Language
