--- a/content/community/training.adoc
+++ b/content/community/training.adoc
@@ -22,6 +22,7 @@ Here is list of companies and individuals that offer Clojure training courses.
 | Company | Location | Courses | Link | contact
 | Cognitect | North America | All levels | https://cognitect.com/services.html | info@cognitect.com +1 919.283.2748
 | BraveAndTrue | North America | All levels | https://www.braveclojure.com/training | daniel@braveclojure.com
+| Nilenso | India | Enterprise Clojure | https://nilenso.com | hello@nilenso.com tel:+918040937123
 | Starweaver | Global | Clojure in a Nutshell | https://www.starweaver.com | USA: +1-646-883-1460 // UK: +44 20 3289 3277 // helpdesk@starweaver.com
 | Peter Taoussanis | Europe | Enterprise Clojure | https://www.taoensso.com | ptaoussanis@taoensso.com
 | Adam Bard | North America | Clojure Training | http://clojuretraining.ca | learnclojure@adambard.com
